Fixed display bug on iphone

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -303,6 +303,12 @@ p, li
       background-image: url('../img/post_updn_edge.png');
       background-repeat: repeat-x;
       background-size: contain;
+      -webkit-mask-image: url('../img/post_updn_edge.png');
+      -webkit-mask-mode: alpha;
+      -webkit-mask-size: contain;
+      mask-image: url('../img/post_updn_edge.png');
+      mask-mode: alpha;
+      mask-size: contain;
     }
 
     .top-right
@@ -327,6 +333,12 @@ p, li
       background-image: url('../img/post_side_edge.png');
       background-repeat: repeat-y;
       background-size: contain;
+      -webkit-mask-image: url('../img/post_side_edge.png');
+      -webkit-mask-mode: alpha;
+      -webkit-mask-size: contain;
+      mask-image: url('../img/post_side_edge.png');
+      mask-mode: alpha;
+      mask-size: contain;
     }
 
     .project-content 
@@ -381,6 +393,12 @@ p, li
       background-image: url('../img/post_side_edge.png');
       background-repeat: repeat-y;
       background-size: contain;
+      -webkit-mask-image: url('../img/post_side_edge.png');
+      -webkit-mask-mode: alpha;
+      -webkit-mask-size: contain;
+      mask-image: url('../img/post_side_edge.png');
+      mask-mode: alpha;
+      mask-size: contain;
     }
 
     .bottom-left
@@ -405,6 +423,12 @@ p, li
       background-image: url('../img/post_updn_edge.png');
       background-size: contain;
       background-repeat: repeat-x;
+      -webkit-mask-image: url('../img/post_updn_edge.png');
+      -webkit-mask-mode: alpha;
+      -webkit-mask-size: contain;
+      mask-image: url('../img/post_updn_edge.png');
+      mask-mode: alpha;
+      mask-size: contain;
     }
 
     .bottom-right
